fixed up the css to display properly on mobile devices.

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,12 @@ position: fixed;
     margin-top:80px;
     margin-left:20px;
 }
+
+@media(max-width:650px) {
+    .container {
+        margin-left: 0px;
+    }
+}
 /* change the font-size of every md-button and md-raised-button*/
 .mat-button, .mat-raised-button {
     font-size: 20px;
@@ -23,6 +29,7 @@ position: fixed;
 .tableWrapper {
     min-width: 320px;
     max-width: 800px;
+    overflow: auto;
 }
 table{
     width:100%;
